--- a/Etap1/WPF/App.xaml
+++ b/Etap1/WPF/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Wpf.App"
+﻿<Application x:Class="WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wpf"
-             StartupUri="TreeV/MainWindow.xaml">
+             xmlns:local="clr-namespace:WPF"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
