--- a/Etap1/WPF/MainWindow.xaml
+++ b/Etap1/WPF/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Wpf.TreeView.TreeView"
+﻿<Window x:Class="WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Wpf.TreeView"
+        xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
-        Title="TreeView" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800">
     <Grid>
         <TreeView Name="TreeV" Margin="312,19,8,23" RenderTransformOrigin="0.5,0.5" ItemsSource="{Binding  HierarchicalAreas}">
             <TreeView.ItemTemplate>
