--- a/Etap1/WPF/MainWindow.xaml
+++ b/Etap1/WPF/MainWindow.xaml
@@ -27,7 +27,7 @@
         <Button x:Name="LoadDLL" Content="Show TreeView" Visibility="{Binding ChangeControlVisibility,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"  Command="{Binding Click_Button}" HorizontalAlignment="Left" Margin="82,150,0,0" VerticalAlignment="Top" Width="133" Height="86" />
         <TextBox Text="{Binding Path=PathVariable,UpdateSourceTrigger=PropertyChanged}"  HorizontalAlignment="Left" Height="25" Margin="10,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="257"/>
         <!--usunalem binding mode=oneWay bo nie zczytywalo path ale nie wiem czy tak moze byc-->
-        <!--<Button x:Name="Browse" Content="Browse" Command="{Binding Click_Browse}" HorizontalAlignment="Left" Margin="192,78,0,0" VerticalAlignment="Top" Width="75"/>-->
+        <Button x:Name="Browse" Content="Browse" Command="{Binding Click_Browse}" HorizontalAlignment="Left" Margin="192,78,0,0" VerticalAlignment="Top" Width="75"/>
         <!--icommand zablokowanie przycisku-->
     </Grid>
 </Window>
