--- a/TPAProject/WPF/MainWindow.xaml
+++ b/TPAProject/WPF/MainWindow.xaml
@@ -4,9 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
+        xmlns:lib="clr-namespace:Library.TreeView;assembly=Library"
         xmlns:converter="clr-namespace:WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <lib:TreeViewModel/>
+    </Window.DataContext>
     <Grid>
         <TreeView Name="TreeV" Margin="312,19,8,23" RenderTransformOrigin="0.5,0.5" ItemsSource="{Binding  HierarchicalAreas}">
             <TreeView.ItemTemplate>
