--- a/TPAProject/WPF/MainWindow.xaml
+++ b/TPAProject/WPF/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WPF.MainWindow"
+﻿<Window x:Class="Presentation.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF"
+        xmlns:local="clr-namespace:Presentation.WPF"
         xmlns:lib="clr-namespace:Library.TreeView;assembly=Library"
-        xmlns:converter="clr-namespace:WPF"
+        xmlns:converter="clr-namespace:Presentation.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
